@@ -1,3 +1,12 @@
+2014-08-19  Filip Pizlo  <fpizlo@apple.com>
+
+        Fix indentation and style in LowLevelInterpreter.asm
+        https://bugs.webkit.org/show_bug.cgi?id=136083
+
+        Reviewed by Mark Lam.
+
+        * llint/LowLevelInterpreter.asm:
+
 2014-08-19  Magnus Granberg  <zorry@gentoo.org>
 
         TEXTREL in libjavascriptcoregtk-1.0.so.0.11.0 on x86 (or i586)
